--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,34 @@ main{
 #indicator{
   margin-top: 2em;
   display: flex;
+  align-items: center;
   gap:20px;
+}
+@keyframes shift-dot{
+from{
+ height:0;
+  width:0;
+}
+to{
+
+  height: 30px;
+  width: 30px;
+}
+}
+.dot {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background-color: #928374;
+  display: inline-block;
+}
+
+.active-dot{
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background-color: #fe8019;
+  display: inline-block;
 }
 
 #next-arrow,#previous-arrow{
@@ -93,6 +120,7 @@ main{
 #next-arrow{
   transform: rotate(180deg);
 }
+
 #image{
   width: 100%;
   height: 100%;
