--- a/src/style.css
+++ b/src/style.css
@@ -73,11 +73,12 @@ main{
   align-items: center;
   display:flex;
   gap: 20px;
-  background-color: #fbf1c7;
+  background-color: #83a598;
   padding: 20px 20px; 
 }
 
 #indicator{
+  height: 40px;
   margin-top: 2em;
   display: flex;
   align-items: center;
@@ -85,13 +86,14 @@ main{
 }
 @keyframes shift-dot{
 from{
- height:0;
+  height:0;
   width:0;
+  background-color: #928374;
 }
 to{
-
   height: 30px;
   width: 30px;
+  background-color: #fe8019;
 }
 }
 .dot {
@@ -105,8 +107,10 @@ to{
 .active-dot{
   height: 30px;
   width: 30px;
+  animation-name: shift-dot;
+  animation-duration: 250ms;
+  animation-fill-mode: forwards;
   border-radius: 50%;
-  background-color: #fe8019;
   display: inline-block;
 }
 
@@ -120,9 +124,28 @@ to{
 #next-arrow{
   transform: rotate(180deg);
 }
-
+@keyframes effect-image{
+from{
+  width: 0%;
+  height: 0%;
+  opacity: 0;
+}
+to{
+  width: 100%;
+  height: 100%;
+  opacity:1;
+}
+}
 #image{
   width: 100%;
   height: 100%;
 }
+.anim-img{
+  animation-name: effect-image;
+  animation-duration: 250ms;
+  animation-fill-mode: backwards;
+}
+
+
+
 
